--- a/voting-system/src/main/resources/templates/hasVoted.html
+++ b/voting-system/src/main/resources/templates/hasVoted.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Already Voted</title>
 </head>
 <body>
-
+<h1 style="color: red;">You have already Voted</h1>
 </body>
 </html>
