--- a/voting-system/src/main/resources/templates/performVote.html
+++ b/voting-system/src/main/resources/templates/performVote.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Thanks</title>
 </head>
 <body>
-
+<h1 style="color: green;">Thanks for your Precious Vote</h1>
+<div th:each="candidate : ${candidates}">
+Click to  vote for :
+<a th:href="@{/voteFor(id=${candidate.id})}" th:text="${candidate.name}"></a>
+</div>
 </body>
 </html>
