--- a/voting-system/src/main/resources/templates/voted.html
+++ b/voting-system/src/main/resources/templates/voted.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Already Voted</title>
+<title>Insert title here</title>
 </head>
 <body>
-<h1 style="color: red;">You have already Voted</h1>
+
 </body>
 </html>
