--- a/voting-system/src/main/resources/templates/voted.html
+++ b/voting-system/src/main/resources/templates/voted.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+<h1 style="font-size: 40px; color: blue;">Thanks for Casting your Vote.</h1>
 </body>
 </html>
