--- a/complaint-manager/src/main/resources/templates/index.html
+++ b/complaint-manager/src/main/resources/templates/index.html
@@ -13,8 +13,8 @@
 	</div>
 	<div>
 		<h2>Messages</h2>
-		<ul th:each="message : ${sessionMessages}">
-			<li th:text="">msg</li>
+  		<ul th:each="message : ${sessionMessages}">
+  		<li>message</li>
 		</ul>
 	</div>
 	<div>
